* Wed Nov 28 2007 Jesse Keating <jkeating@redhat.com>
- Figure out number of isos on the fly, based on tree size
- Add command line option to disable creation of split media
- Remove -S -P options, as splittree and packageorder are now
called from createIsos, if needed.

* Tue Nov 27 2007 Jesse Keating <jkeating@redhat.com>
- Enable TMPDIR again so that anconda-runtime working files
go to the working dir.
- Use downloadPkgs() from yum instead of a homebrew download function.
- Add a callback to show download progress
- Add a force option to _link, removes existing target file

* Thu Nov 22 2007 Jesse Keating <jkeating@redhat.com>
- Print a usage if no options are passed
- Correct a man page typo
- Update the F8 config to use released repos

* Wed Nov 07 2007 Jesse Keating <jkeating@redhat.com>
- Preserve timestamps on release note files

* Mon Oct 29 2007 Jesse Keating <jkeating@redhat.com>
- Check to see if the cached package is same size or larger and if so remove
it.  Otherwise regets will freak out.

* Tue Oct 23 2007 Jesse Keating <jkeating@redhat.com>
- Add java-development to the group set.

* Thu Oct 11 2007 Jesse Keating <jkeating@redhat.com>
- Add a cost to the media repo file.

* Tue Oct 02 2007 Jesse Keating <jkeating@redhat.com>
- Make sure we stuff a string value into ConfigParser.

* Wed Sep 26 2007 Jesse Keating <jkeating@redhat.com>
- Pull in all the optional Virt stuff
- Don't expire the metadata from Media repo.

* Tue Sep 25 2007 Jesse Keating <jkeating@redhat.com>
- Fix location of media.repo file.

* Tue Sep 18 2007 Jesse Keating <jkeating@redhat.com>
- Drop a .repo file on the root of the media.  Used after install.

* Fri Sep 14 2007 Jesse Keating <jkeating@redhat.com>
- Create repoview content in the tree
- Move the .composeinfo file into the directory we actually publish

* Wed Sep 12 2007 Jesse Keating <jkeating@redhat.com>
- Remove python2.5 needs (Mark McLoughlin)
- Consolidate the download code for easier maint. (Mark McLoughlin)